# EcomChatbot

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: cicd.yaml
Backend/: database.py  models.py
Backend/routes/: cart.py  chatbot.py  orders.py  products.py
Frontend/: index.html
Frontend/src/: main.js  router.js  style.css
Frontend/src/components/: Chatbot.js  Header.js  Hero.js
Frontend/src/pages/: Admin.js  Cart.js  Home.js  ProductDetail.js
Frontend/src/services/: api_v2.js  state.js
Test/: experiment.ipynb  pydantic_ai.ipynb
docs/: 00-terminologies.md
docs/01-project-overview/: 00-project-overview.md
docs/02-backend/: 00-backend-overview.md  01-main-app.md  03-product-routes.md  04-order-routes.md  05-cart-routes.md  06-chatbot-routes.md  08-database.md  09-models.md
docs/03-frontend/: 00-frontend-overview.md  01-main-js.md  02-styling.md
docs/04-database/: 00-database-overview.md
docs/05-models/: 00-models-overview.md
docs/06-deployment/: 00-deployment.md
